--- a/style.css
+++ b/style.css
@@ -89,3 +89,65 @@ footer{
     padding: 20px;
     color: white;
 }
+@media screen and (max-width:700px){
+    main{
+        margin: auto;
+        width: 80%;
+        display: grid;
+        grid-template-areas: "h  "
+                            "n "
+                            " a"
+                            "as"
+                            "f ";
+    }
+    nav ul li{
+        list-style: none;
+        display: block;
+    }
+    nav{
+        height: auto;
+    }
+    article{
+        max-width: fit-content;
+        text-align: start;
+    }
+    aside img{
+        max-width: 200px;
+        
+    }
+    aside{
+        margin: auto;
+    }
+}
+@media screen and (max-width:400px){
+    main{
+        margin: 10px;
+        display: grid;
+        grid-template-areas: "h h "
+                            "n n"
+                            "a a"
+                            "as as"
+                            "f f";
+    }
+    nav ul li{
+        list-style: none;
+        display: block;
+    }
+    nav{
+        height: auto;
+        margin: 20px;
+    }
+    article{
+        max-width: fit-content;
+        text-align: start;
+    }
+    aside img{
+        max-width: 150px;
+    }
+    aside{
+        margin: auto;
+    }
+    .kepek img{
+        width: 150px;
+    }
+}
